[package]
name = "macroquad"
version = "0.4.5"
authors = ["xLin7648 <xLinAbsL@outlook.com>"]
edition = "2021"
homepage = "https://github.com/xLin7648/macroquad"
repository = "https://github.com/xLin7648/macroquad"
description = """
Simple and easy to use graphics library
"""
readme="README.md"
license = "MIT OR Apache-2.0"

[features]
audio = ["quad-snd"]
log-rs = ["log"]
default = []

[package.metadata.android]
assets = "examples/"

[profile.dev.package."*"]
opt-level = 3

[package.metadata.docs.rs]
all-features = true

[dependencies]
miniquad = { git = "https://github.com/xLin7648/miniquad.git", features = ["log-impl"] }
# miniquad = { path = "D:/Documents/GitHub/miniquad", features = ["log-impl"] }
quad-snd = { git = "https://github.com/xLin7648/quad-snd.git", optional = true }
# quad-snd = { path = "D:/Documents/GitHub/quad-snd", optional = true }
quad-rand = "0.2.1"
glam = {version = "0.21", features = ["scalar-math"] }
image = { version = "0.24", default-features = false, features = ["png", "tga"] }
macroquad_macro = { path = "./macroquad_macro" }
fontdue = "0.7"
bumpalo = "3.4"
backtrace = { version = "0.3.60", optional = true, default-features = false, features = [ "std", "libbacktrace" ] }
log = { version = "0.4", optional = true }
slotmap = "1.0"

[dev-dependencies]
macroquad-particles = { path = "./particles" }
macroquad-tiled = { path = "./tiled" }
macroquad-profiler = { path = "./profiler" }
macroquad-platformer = { path = "./physics-platformer" }

# workaround to fix the examples
# this allows to use macroquad-particles in examples without two versions of macroquad
[patch.crates-io]
macroquad = { path = './' }

#quad-snd = {path = '../quad-snd'}
#miniquad = { path = '../miniquad' }
#quad-gl = {path = './quad-gl'}
